--- a/app/src/main/res/layout/activity_calorie_goal_achieved_banner.xml
+++ b/app/src/main/res/layout/activity_calorie_goal_achieved_banner.xml
@@ -233,11 +233,11 @@
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:layout_marginTop="10dp"
-        android:background="@drawable/btn_mid_rounded"
+        android:background="@drawable/btn_mid_rounded_red"
         android:backgroundTint="@color/secondary"
         android:fontFamily="@font/outfit_medium"
         android:text="Not Now"
-        android:textColor="?attr/colorPrimary"
+        android:textColor="@color/btnCancelColor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnCalorieBannerShare" />
@@ -245,7 +245,7 @@
     <ImageView
         android:id="@+id/imBannerCalorieAchievement"
         android:layout_width="match_parent"
-        android:layout_height="600dp"
+        android:layout_height="500dp"
         android:layout_marginTop="100dp"
         app:layout_constraintTop_toTopOf="@+id/imageView5"
         app:srcCompat="@drawable/calorieachievement"
