--- a/app/src/main/res/layout/activity_water_goal_achieved_banner.xml
+++ b/app/src/main/res/layout/activity_water_goal_achieved_banner.xml
@@ -225,11 +225,11 @@
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:layout_marginTop="10dp"
-        android:background="@drawable/btn_mid_rounded"
+        android:background="@drawable/btn_mid_rounded_red"
         android:backgroundTint="@color/secondary"
         android:fontFamily="@font/outfit_medium"
         android:text="Not Now"
-        android:textColor="?attr/colorPrimary"
+        android:textColor="@color/btnCancelColor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnWaterBannerShare" />
@@ -251,7 +251,7 @@
     <ImageView
         android:id="@+id/imBannerWaterAchievement"
         android:layout_width="match_parent"
-        android:layout_height="600dp"
+        android:layout_height="500dp"
         android:layout_marginTop="100dp"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/waterachievement"
